# quelfilm-chatbot-app

./: .gitignore  LICENSE  README.md  app.py  demo.ipynb  pyproject.toml
quelfilm/: app.py  engine.py  settings.py
resources/: training.md
templates/: index.html
