[tool.poetry]
name = "quelfilm-chatbot-app"
version = "0.1.0"
description = "webapp for choose a movie"
authors = ["thomas.marquis.dev <thomas.marquis.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nlp-tools-py-lib = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
